fix (tab-bar): scrollbar

--- a/src/App.css
+++ b/src/App.css
@@ -35,11 +35,12 @@
 }
 
 .tab-bar {
-    @apply relative sm:overflow-x-scroll sm:overflow-y-hidden py-7 xl:py-5 px-3 xl:px-1;
+    @apply relative sm:overflow-x-hidden sm:overflow-y-hidden py-7 xl:py-5 px-3 xl:px-1;
     border-top: 1px solid white;
     border-bottom: 1px solid white;
     -ms-overflow-style: none; /* IE and Edge */
     scrollbar-width: none; /* Firefox */
+    /* scroll-behavior: smooth; */ 
 }
 
 .tab-bar::-webkit-scrollbar {
